@@ -1,7 +1,7 @@
 #  File src/library/base/R/outer.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2013 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -18,9 +18,6 @@
 
 outer <- function (X, Y, FUN = "*", ...)
 {
-    # no.nx <- is.null(nx <- dimnames(X <- as.array(X))); dX <- dim(X)
-    # no.ny <- is.null(ny <- dimnames(Y <- as.array(Y))); dY <- dim(Y)
-
     if(is.array(X)) {
         dX <- dim(X)
         nx <- dimnames(X)
@@ -56,10 +53,11 @@ outer <- function (X, Y, FUN = "*", ...)
         dim(robj) <- c(dX, dY) # careful not to lose class here
     }
     ## no dimnames if both don't have ..
-    if(no.nx) nx <- vector("list", length(dX)) else
-    if(no.ny) ny <- vector("list", length(dY))
-    if(!(no.nx && no.ny))
+    if(!(no.nx && no.ny)) {
+	if(no.nx) nx <- vector("list", length(dX)) else
+	if(no.ny) ny <- vector("list", length(dY))
 	dimnames(robj) <- c(nx, ny)
+    }
     robj
 }
 
